--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,7 +26,7 @@
 						<h4>{{ product.title }}</h4>
 						<div class="description">{{ product.description }}</div>
 						<div class="price">{{ product.price|number_format(2, ',') }}€</div>
-						<a href="#" class="check-product">Voir le produit</a>
+						<a href="/product/{{product.id}}" class="check-product">Voir le produit</a>
 					</li>
 				{% endfor %}
 			</ul>
@@ -36,7 +36,7 @@
 				<div class="content-big">
 					<h3>NOTRE CONVICTION</h3>
 					<p>Chez GreenGoodies, nous croyons en un monde où le commerce peut être synonyme de bien-être pour la planète et ses
-					<br>habitants. Notre mission est de vous proposer une sélection rigoureuse de produits qui allient qualité, durabilité et éthique</p>
+						<br>habitants. Notre mission est de vous proposer une sélection rigoureuse de produits qui allient qualité, durabilité et éthique</p>
 				</div>
 			</div>
 			<div class="short">
@@ -51,9 +51,12 @@
 				<div class="content-big">
 
 					<h3>NOS VALEURS</h3>
-					<p>Durabilité : Nous sélectionnons soigneusement des produits qui <br>respectent l'environnement et favorisent la durabilité.
-					<br>Éthique : Nous nous engageons à travailler avec des partenaires et des <br>fournisseurs qui partagent nos valeurs éthiques.
-					<br>Écologie : Nous encourageons des pratiques respectueuses de <br>l'écosystème et privilégions les matériaux écologiques.</p>
+					<p>Durabilité : Nous sélectionnons soigneusement des produits qui
+						<br>respectent l'environnement et favorisent la durabilité.
+						<br>Éthique : Nous nous engageons à travailler avec des partenaires et des
+						<br>fournisseurs qui partagent nos valeurs éthiques.
+						<br>Écologie : Nous encourageons des pratiques respectueuses de
+						<br>l'écosystème et privilégions les matériaux écologiques.</p>
 				</div>
 
 			</div>
