--- a/assets/styles/scss/home.scss
+++ b/assets/styles/scss/home.scss
@@ -16,6 +16,7 @@
                 font-family: 'Inter Medium';
                 font-size: 4rem;
                 margin-bottom: 38px;
+                font-weight: 500;
             }
             p {
                 font-family: 'Inter Light';
@@ -36,6 +37,7 @@
 .nos-produits {
     h3 {
         font-family: "Inter Medium";
+        font-weight: 500;
         font-size: 14px;
         padding: 37px 100px;
     }
@@ -107,6 +109,7 @@
                 font-family: "Inter Medium";
                 font-size: 20px;
                 margin: 0 0 10px;
+                font-weight: 500;
             }
             p {
                 font-family: "Inter Light";
