--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -3,10 +3,27 @@
 @import "header";
 @import "footer";
 @import "home";
+@import "content";
 
 body {
     color: $primary;
-    background-color: #fffdf7;
+    background-color: $beige;
     margin: 0;
-    font-family: 'Inter' ,Arial, Helvetica, sans-serif;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
+}
+
+.btn-darkgrey {
+    cursor: pointer;
+    background-color: #565656;
+    color: #ffffff;
+    font-size: 14px;
+    transition: 0.3s;
+    max-width: 479px;
+    width: 100%;
+    height: 77px;
+    border: none;
+    padding: 0;
+    &:hover {
+        background-color: black;
+    }
 }
