--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,9 @@
 				<nav>
 					<ul>
 					{% if app.user %}
-						<li><a href="#">Nos produits</a></li>
-						<li><a href="#">Mon panier</a></li>
-						<li><a href="#">Mon compte</a></li>
+						<li><a href="{{path("app_home")}}">Nos produits</a></li>
+						<li><a href="{{path("app_shopping")}}">Mon panier</a></li>
+						<li><a href="{{path("app_profile")}}">Mon compte</a></li>
 						<li><a href="{{path("app_logout")}}">Déconnexion</a></li>
 					{% else %}
 						<li><a href="{{path("app_login")}}">Connexion</a></li>
