--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -308,6 +308,44 @@ footer div {
   display: block;
 }
 
+.shopping {
+  background-color: #f7f1ec;
+  padding: 102px 0 146px;
+}
+.shopping h1 {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Inter Medium";
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+.shopping .center-shopping {
+  max-width: 604px;
+  margin: auto;
+}
+.shopping .center-shopping .content-total-shopping {
+  padding: 20px 38px;
+  background-color: #FFFDF7;
+  text-align: right;
+}
+.shopping .center-shopping .content-total-shopping .total {
+  font-family: "Inter Medium";
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 6px;
+}
+.shopping .center-shopping .content-total-shopping .total .total-price {
+  font-size: 20px;
+}
+.shopping .center-shopping .content-total-shopping .livraison {
+  font-size: 12px;
+  color: #666666;
+}
+.shopping .center-shopping .btn-darkgrey {
+  margin: auto;
+  margin-top: 29px;
+}
+
 body {
   color: #333333;
   background-color: #fffdf7;
@@ -326,6 +364,10 @@ body {
   height: 77px;
   border: none;
   padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
 }
 .btn-darkgrey:hover {
   background-color: black;
