--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -23,6 +23,11 @@ body {
     height: 77px;
     border: none;
     padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
     &:hover {
         background-color: black;
     }
