--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
 				<nav>
 					<ul>
 					{% if app.user %}
-						<li><a href="{{path("app_home")}}">Nos produits</a></li>
+						<li><a href="{{path("app_home")}}#products">Nos produits</a></li>
 						<li><a href="{{path("app_shopping")}}">Mon panier</a></li>
 						<li><a href="{{path("app_profile")}}">Mon compte</a></li>
 						<li><a href="{{path("app_logout")}}">Déconnexion</a></li>
