--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,10 +14,10 @@
 				</div>
 			</div>
 			<div class="right-bienvenue">
-				<img src="{{ asset('images/accueil.jpeg') }}" alt="Image de bienvenue">
+				<img src="{{ asset('images/accueil.webp') }}" alt="Image de bienvenue">
 			</div>
 		</section>
-		<section class="nos-produits">
+		<section id="products" class="nos-produits ancre">
 			<h3>NOS PRODUITS</h3>
 			<ul>
 				{% for product in products %}
@@ -40,12 +40,12 @@
 				</div>
 			</div>
 			<div class="short">
-				<img src="{{ asset("images/conviction.jpeg") }}" alt="Image de notre conviction">
+				<img src="{{ asset("images/conviction.webp") }}" alt="Image de notre conviction">
 			</div>
 		</section>
 		<section class="valeur">
 			<div class="short">
-				<img src="{{ asset("images/valeurs.jpeg") }}" alt="Image de notre conviction">
+				<img src="{{ asset("images/valeurs.webp") }}" alt="Image de notre conviction">
 			</div>
 			<div class="big apple">
 				<div class="content-big">
