--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 	<main class="log">
 		<div class="left-log">
-			<img src="{{ asset("images/conviction.jpeg") }}" alt="Image de connexion">
+			<img src="{{ asset("images/conviction.webp") }}" alt="Image de connexion">
 		</div>
 		<div class="right-log">
 			<div class="right-log-content">
