--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -1,20 +1,42 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Profile
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello  ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>E:/wamp64/www/Green-Goodies/src/Controller/UserController.php</code></li>
-        <li>Your template at <code>E:/wamp64/www/Green-Goodies/templates/user/index.html.twig</code></li>
-    </ul>
-</div>
+	<main class="profile">
+		<div class="center-content">
+			<h1>Mon compte</h1>
+			{% if orders is defined %}
+				<div class="content-orders">
+					<h2>Mes commandes</h2>
+					<table>
+						<thead>
+							<tr>
+								<th>N°</th>
+								<th>Date</th>
+								<th>Prix</th>
+							</tr>
+						</thead>
+                        <tbody>
+                            {% for order in orders %}
+                                <tr>
+                                    <td>{{ order.id }}</td>
+                                    <td>{{ order.date }}</td>
+                                    <td>{{ order.price }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+					</table>
+				</div>
+			{% endif %}
+            <div class="content-api">
+                <h2>Mon accès API</h2>
+                <a href="#" class="btn-darkgrey">Activer mon accès API</a>
+            </div>
+            <div class="content-delete-account">
+                <a href="#" class="btn-darkgrey">Supprimer mon compte</a>
+            </div>
+		</div>
+	</main>
 {% endblock %}
