--- a/assets/styles/scss/content.scss
+++ b/assets/styles/scss/content.scss
@@ -139,7 +139,7 @@
         color: $lightgrey;
         font-size: 14px;
         margin-bottom: 17px;
-        display: block;
+        display: inline-block;
         &:hover {
             text-decoration: underline;
         }
