--- a/templates/product/shopping.html.twig
+++ b/templates/product/shopping.html.twig
@@ -33,7 +33,11 @@
 				</div>
 				<div class="livraison">Frais de livraison : Offert</div>
 			</div>
-			<a href="#" class="btn-darkgrey">Valider la commande</a>
+			{{ form_start(orderForm) }}
+			{{form_row(orderForm.submit)}}
+			{{ form_end(orderForm) }}
+
+			{# <a href="{{path('app_order')}}" class="btn-darkgrey">Valider la commande</a> #}
 		</div>
 	</main>
 {% endblock %}
