valid order not working

--- a/templates/product/shopping.html.twig
+++ b/templates/product/shopping.html.twig
@@ -33,9 +33,9 @@
 				</div>
 				<div class="livraison">Frais de livraison : Offert</div>
 			</div>
-			{{ form_start(orderForm) }}
-			{{form_row(orderForm.submit)}}
-			{{ form_end(orderForm) }}
+			{# {{ form_start(orderForm) }}
+				{{form_row(orderForm.submit)}}
+			{{ form_end(orderForm) }} #}
 
 			{# <a href="{{path('app_order')}}" class="btn-darkgrey">Valider la commande</a> #}
 		</div>
