--- a/assets/styles/scss/content.scss
+++ b/assets/styles/scss/content.scss
@@ -232,4 +232,37 @@
             margin-top: 0;
         }
     }
+
+    .content-orders {
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            thead {
+                margin-bottom: 20px;
+                th {
+                    text-align: left;
+                    font-size: 14px;
+                    color: $lightgrey;
+                    font-weight: 400;
+                }
+            }
+            tbody {
+                tr:not(:last-child) {
+                    td {
+
+                        border-bottom: 1px solid #cccccc;
+                    }
+                }
+                td {
+                    padding: 20px 0 30px;
+                    &:first-child {
+                        width: 168px;
+                    }
+                    &:last-child {
+                        width: 1px;
+                    }
+                }
+            }
+        }
+    }
 }
