--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -7,7 +7,7 @@
 	<main class="profile">
 		<div class="center-content">
 			<h1>Mon compte</h1>
-			{% if orders is defined %}
+			{% if orders|length > 0 %}
 				<div class="content-orders">
 					<h2>Mes commandes</h2>
 					<table>
@@ -18,25 +18,27 @@
 								<th>Prix</th>
 							</tr>
 						</thead>
-                        <tbody>
-                            {% for order in orders %}
-                                <tr>
-                                    <td>{{ order.id }}</td>
-                                    <td>{{ order.date }}</td>
-                                    <td>{{ order.price }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
+						<tbody>
+							{% for order in orders %}
+								<tr>
+									<td>{{ order.id }}</td>
+									<td>{{ order.dateFormated(order.date) }}</td>
+									<td>{{ order.price|number_format(2, ',') }}€</td>
+								</tr>
+							{% endfor %}
+						</tbody>
 					</table>
 				</div>
 			{% endif %}
-            <div class="content-api">
-                <h2>Mon accès API</h2>
-                <a href="#" class="btn-darkgrey">Activer mon accès API</a>
-            </div>
-            <div class="content-delete-account">
-                <a href="#" class="btn-darkgrey">Supprimer mon compte</a>
-            </div>
+			<div class="content-api">
+				<h2>Mon accès API</h2>
+				<form action="{{path('app_active_api')}}" method="POST">
+					<input type="submit" class="btn-darkgrey" value="{% if app.user.isActiveApi %}Désactiver{% else %}Activer{% endif %} mon accès API">
+				</form>
+			</div>
+			<div class="content-delete-account">
+				<a href="{{path('app_delete_account')}}" class="btn-darkgrey">Supprimer mon compte</a>
+			</div>
 		</div>
 	</main>
 {% endblock %}
